--- a/project/java/translations/values/strings.xml
+++ b/project/java/translations/values/strings.xml
@@ -159,4 +159,6 @@
     <string name="broken_libc_title">Broken OS detected</string>
     <string name="broken_libc_text">Your device has broken system libraries, this application will most probably crash. Please install a system update, or flash a custom ROM, or copy file /system/lib/libc.so from another device (experts only!)</string>
 
+    <string name="hardware_mouse_detected">Hardware mouse detected, disabling mouse emulation</string>
+
 </resources>
