--- a/project/jni/sdl_net/README
+++ b/project/jni/sdl_net/README
@@ -5,7 +5,7 @@ The latest version of this library is available from:
 http://www.libsdl.org/projects/SDL_net/
 
 This is an example portable network library for use with SDL.
-It is available under the GNU Library General Public License.
+It is available under the zlib license, found in the file COPYING.
 The API can be found in the file SDL_net.h
 This library supports UNIX, Windows, MacOS Classic, MacOS X,
 BeOS and QNX.
