--- a/project/java/translations/values/strings.xml
+++ b/project/java/translations/values/strings.xml
@@ -141,7 +141,7 @@
     <string name="calibrate_touchscreen_touch">Touch all edges of the screen, press BACK when done</string>
 
     <string name="video">Video settings</string>
-    <string name="video_smooth">Smooth the video</string>
+    <string name="video_smooth">Linear video filtering</string>
     <string name="video_separatethread">Separate thread for video, will increase FPS on some devices</string>
 
     <string name="text_edit_click_here">Tap to start typing, press Back when done</string>
