--- a/todo.txt
+++ b/todo.txt
@@ -1,23 +1,22 @@
-Requested features
-==================
+Requested features (see also bugs.txt)
+======================================
 
 - Option for default on-screen key theme in AndroidAppSettings.cfg.
 
-- Perform a check for free space available on SD card before writing there, and write to the internal storage if SD card is unplugged.
+- Select between normal mouse input and magnifying glass/relative input automatically, based on screen size.
 
-- Split Settings.java into several files
+- Split Settings.java into several files.
 
 - Show/hide screen controls with longpress on Text Edit button.
-
-- Support of libjnigraphics (it will disable on-screen keyboard, only SW SDL screen surface supported)
 
 - Floating on-screen joystick - initially invisible, it appears when you touch the screen,
   centered on your finger, then it slides with your finger if you bump the joystick edge.
 
-- Export phone vibrator to SDL - interface is available in SDL 1.3
+- Export phone vibrator to SDL - interface is available in SDL 1.3.
 
-- Control screen brightness with SDL_SetGamma()
+- Control screen brightness with SDL_SetGamma().
 
-- Zoom in-out whole screen in SW mode with some SDL key -
-  much like the "On-screen magnifying glass" feature (lazy porter's golden hammer)
+- Zoom in-out whole screen in SW mode with some SDL key or gesture, as in AndroidVNC. -
 
+- Support of libjnigraphics (it will disable on-screen keyboard, only SW SDL screen surface supported).
+  This is not relevant already, as every device around is fast enough with GL.
