--- a/project/java/translations/values/strings.xml
+++ b/project/java/translations/values/strings.xml
@@ -165,4 +165,7 @@
     <string name="not_enough_ram_size">This app needs %1$d Mb RAM, your device has %2$d Mb</string>
     <string name="ignore">Ignore</string>
 
+    <string name="calibrate_gyroscope">Calibrate gyroscope</string>
+    <string name="calibrate_gyroscope_text">Put your phone on a flat surface</string>
+
 </resources>
