Fast SDL event queue

--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,6 @@
 Requested features (see also bugs.txt)
 ======================================
 
-- Fast event queue and joystick event trottling in SDL - remove mutex from SDL_ANDROID_PumpEvents(),
-  and add another compatibility hack option, because queue got bloated and my phone rebooted.
-
-- Gyroscope calibration dialog.
-
 - Option for default on-screen key theme in AndroidAppSettings.cfg.
 
 - Select between normal mouse input and magnifying glass/relative input automatically, based on screen size.
@@ -25,3 +20,5 @@ Requested features (see also bugs.txt)
 
 - Support of libjnigraphics (it will disable on-screen keyboard, only SW SDL screen surface supported).
   This is not relevant already, as every device around is fast enough with GL.
+
+- Second joystick, to be used in TeeWorlds.
