--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
 Requested features (see also bugs.txt)
 ======================================
 
+- When downloading data, show cancel dialog when pressing Back.
+
 - Add game action text to keys in the on-screen keyboard layout dialog.
 
 - Redesign on-screen keyboard layout dialog.
@@ -8,8 +10,6 @@ Requested features (see also bugs.txt)
 - Option to reset SDL config to default.
 
 - Remove accelerometer-as-keys config and trackball config.
-
-- Do not highlight analog on-screen joystick when pressing arrow buttons.
 
 - Option for default on-screen key theme in AndroidAppSettings.cfg.
 
