--- a/project/java/translations/values/strings.xml
+++ b/project/java/translations/values/strings.xml
@@ -173,4 +173,9 @@
     <string name="reset_config">Reset config to defaults</string>
     <string name="reset_config_ask">Reset all options to default values?</string>
 
+    <string name="cancel_download">Cancel data downloading?</string>
+    <string name="cancel_download_resume">You can resume it later, the data will not be downloaded twice.</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+
 </resources>
