--- a/project/java/translations/values/strings.xml
+++ b/project/java/translations/values/strings.xml
@@ -136,7 +136,7 @@
     <string name="remap_screenkb_button_rotateright">Rotate right two-finger gesture</string>
 
     <string name="screenkb_custom_layout">Customize on-screen keyboard layout</string>
-    <string name="screenkb_custom_layout_help">Slide screen to add button, press BACK to undo last button</string>
+    <string name="screenkb_custom_layout_help">Press BACK when done. Resize buttons by sliding on empty space.</string>
 
     <string name="calibrate_touchscreen">Calibrate touchscreen</string>
     <string name="calibrate_touchscreen_touch">Touch all edges of the screen, press BACK when done</string>
@@ -156,9 +156,6 @@
     <string name="display_size_tiny_touchpad">Tiny, touchpad mode</string>
 
     <string name="show_more_options">Show more options</string>
-
-    <string name="broken_libc_title">Broken OS detected</string>
-    <string name="broken_libc_text">Your device has broken system libraries, this application will most probably crash. Please install a system update, or flash a custom ROM, or copy file /system/lib/libc.so from another device (experts only!)</string>
 
     <string name="hardware_mouse_detected">Hardware mouse detected, disabling mouse emulation</string>
 
