More fixes to on-screen keyboard

--- a/project/java/translations/values-fr/strings.xml
+++ b/project/java/translations/values-fr/strings.xml
@@ -172,4 +172,5 @@
 <string name="yes">Yes</string>
 <string name="no">No</string>
 <string name="screenkb_custom_layout_help">Press BACK when done. Resize buttons by sliding on empty space.</string>
+<string name="controls_screenkb_custom">Custom</string>
 </resources>
