--- a/project/java/translations/values/strings.xml
+++ b/project/java/translations/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="controls_screenkb_medium">Medium</string>
     <string name="controls_screenkb_small">Small</string>
     <string name="controls_screenkb_tiny">Tiny</string>
+    <string name="controls_screenkb_custom">Custom</string>
     <string name="controls_screenkb_theme">On-screen keyboard theme</string>
     <string name="controls_screenkb_by">%1$s by %2$s</string>
     <string name="controls_screenkb_transparency">On-screen keyboard transparency</string>
