--- a/project/java/translations/values/strings.xml
+++ b/project/java/translations/values/strings.xml
@@ -126,9 +126,9 @@
     <string name="remap_hwkeys_select">Select SDL keycode</string>
 
     <string name="remap_screenkb">Remap on-screen controls</string>
-    <string name="remap_screenkb_joystick">On-screen joystick</string>
-    <string name="remap_screenkb_button">On-screen button</string>
-    <string name="remap_screenkb_button_text">On-screen text input button</string>
+    <string name="remap_screenkb_joystick">Joystick</string>
+    <string name="remap_screenkb_button">Button</string>
+    <string name="remap_screenkb_button_text">Text input button</string>
     <string name="remap_screenkb_button_gestures">Two-finger screen gestures</string>
     <string name="remap_screenkb_button_gestures_sensitivity">Two-finger screen gestures sensitivity</string>
     <string name="remap_screenkb_button_zoomin">Zoom in two-finger gesture</string>
