--- a/todo.txt
+++ b/todo.txt
@@ -24,3 +24,7 @@ Requested features (see also bugs.txt)
   This is not relevant already, as every device around is fast enough with GL.
 
 - Second joystick, to be used in TeeWorlds.
+
+- OpenTTD: make English the default language, because there are no fonts for many languages.
+
+- UQM: On-screen buttons are re-appearing when using gamepag and switching between game screens.
