--- a/todo.txt
+++ b/todo.txt
@@ -30,3 +30,5 @@ Requested features (see also bugs.txt)
 - OpenTTD: make English the default language, because there are no fonts for many languages.
 
 - UQM: On-screen buttons are re-appearing when using gamepad and switching between game screens.
+
+- UQM: Redesign gamepad controls.
