--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
-Requested features (see also bugs.txt)
-======================================
+Requested features, might never get implemented
+===============================================
 
 - Option for default on-screen key theme in AndroidAppSettings.cfg.
 
@@ -19,6 +19,13 @@ Requested features (see also bugs.txt)
 - Support of libjnigraphics (it will disable on-screen keyboard, only SW SDL screen surface supported).
   This is not relevant already, as every device around is fast enough with GL.
 
+TODO, which will get actually done
+==================================
+
+- TeeWorlds: add accelerometer jump, improve touchscreen controls if possible.
+
+- TeeWorlds: fix Ouya bugs (whole-screen shrink, remove controls from settings), submit to Ouya store.
+
 - UQM: On-screen buttons are re-appearing when using gamepad and switching between game screens.
 
 - UQM: Redesign gamepad controls.
@@ -26,3 +33,5 @@ Requested features (see also bugs.txt)
 - UQM: Arrow keys do not steer the ship.
 
 - OpenArena: move 3-rd person camera to the side, above shoulder.
+
+- SuperTux: Update, enable OpenGL renderer, add touchscreen jump helper.
