--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,6 @@
 Requested features, might never get implemented
 ===============================================
 
-- Option for default on-screen key theme in AndroidAppSettings.cfg.
-
 - Select between normal mouse input and magnifying glass/relative input automatically, based on screen size.
 
 - Show/hide screen controls with longpress on Text Edit button.
@@ -14,7 +12,7 @@ Requested features, might never get implemented
 
 - Control screen brightness with SDL_SetGamma().
 
-- Zoom in-out whole screen in SW mode with some SDL key or gesture, as in AndroidVNC. -
+- Zoom in-out whole screen in SW mode with some SDL key or gesture, as in AndroidVNC.
 
 - Support of libjnigraphics (it will disable on-screen keyboard, only SW SDL screen surface supported).
   This is not relevant already, as every device around is fast enough with GL.
@@ -34,4 +32,8 @@ TODO, which will get actually done
 
 - OpenArena: move 3-rd person camera to the side, above shoulder.
 
+- OpenArena: finish Ouya port.
+
 - SuperTux: Update, enable OpenGL renderer, add touchscreen jump helper.
+
+- UfoAI: huge huge update.
