--- a/todo.txt
+++ b/todo.txt
@@ -17,6 +17,8 @@ Requested features, might never get implemented
 - Support of libjnigraphics (it will disable on-screen keyboard, only SW SDL screen surface supported).
   This is not relevant already, as every device around is fast enough with GL.
 
+- Cloud save support.
+
 TODO, which will get actually done
 ==================================
 
@@ -27,8 +29,6 @@ TODO, which will get actually done
 - OpenArena: chat text input should be faster.
 
 - OpenArena: Shift and Ctrl keys on USB keyboard do not work for text input.
-
-- OpenArena: Play silence if audio buffer underrun.
 
 - OpenArena: When entering with USB keyboard into chatbox, first 't' disappears.
 
