--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
 Requested features, might never get implemented
 ===============================================
 
+- Use finger hover events for mouse emulation.
+
 - Select between normal mouse input and magnifying glass/relative input automatically, based on screen size.
 
 - Show/hide screen controls with longpress on Text Edit button.
@@ -24,11 +26,17 @@ TODO, which will get actually done
 
 - OpenArena: Smooth camera rotation in aim under finger mode.
 
+- OpenArena: fix and enable renderer_oa.
+
 - OpenArena: chat text input should be faster.
 
 - OpenArena: Shift and Ctrl keys on USB keyboard do not work for text input.
 
 - OpenArena: When entering with USB keyboard into chatbox, first 't' disappears.
+
+- XSDL: x86 build.
+
+- XSDL: mouse wheel support.
 
 - SuperTux: Update, enable OpenGL renderer, add touchscreen jump helper.
 
