--- a/todo.txt
+++ b/todo.txt
@@ -24,15 +24,21 @@ Requested features, might never get implemented
 TODO, which will get actually done
 ==================================
 
+- SDL: support for finger hover events.
+
+- OpenArena: fix gamepad support.
+
+- OpenArena: Text input with console open does not send Enter keypress.
+
 - OpenArena: chat text input should be faster.
 
 - OpenArena: Shift and Ctrl keys on USB keyboard do not work for text input.
 
 - OpenArena: When entering with USB keyboard into chatbox, first 't' disappears.
 
-- XSDL: x86 build.
+- XSDL: Android clipboard support.
 
-- XSDL: mouse wheel support.
+- GIMP: Ctrl/Alt/Shift toggles in the taskbar.
 
 - SuperTux: Update, enable OpenGL renderer, add touchscreen jump helper.
 
