--- a/todo.txt
+++ b/todo.txt
@@ -34,6 +34,8 @@ TODO, which will get actually done
 
 - XSDL: Android clipboard support.
 
+- XSDL: 1280x800 video mode, and 1/2, 3/4, 5/8 and 7/8 native resolution video modes.
+
 - GIMP: Ctrl/Alt/Shift toggles in the taskbar.
 
 - SuperTux: Update, enable OpenGL renderer, add touchscreen jump helper.
