--- a/todo.txt
+++ b/todo.txt
@@ -38,6 +38,8 @@ TODO, which will get actually done
 
 - SDL: Send right mouse click when releasing two fingers, add mouse wheel event when dragging two fingers.
 
+- OpenArena: do not treat commands starting with / as chat text.
+
 - GIMP: Ctrl/Alt/Shift toggles in the taskbar.
 
 - GIMP: File open dialog shows error message when loading preview for JPG file.
